--- a/views/modUsuarios.jade
+++ b/views/modUsuarios.jade
@@ -2,4 +2,21 @@ extends ./menuAd.jade
 block main
     main
         h1 Modificar Usuarios
+        each val, index in nom
+            -nombre={val}
+            -console.log(nombre)
+        table(class="table table-striped")
+            thead
+                tr
+                    th(scope="col")
+                        |Nombre de Usuario
+                    th(scope="col")
+                        |Editar
+            tbody
+                each val, index in usu
+                    tr
+                        th(scope="col")| !{val}
+                        th(scope="col", class="rowIMG")
+                            a(href="/editarUsu")
+                                img(src="img/editar.png", alt="Editar Usuario", class="imgEdit")
         
