--- a/views/modUsuarios.jade
+++ b/views/modUsuarios.jade
@@ -36,6 +36,7 @@ block main
                             th(scope="col")
                                 input(type="text",class="form-control", placeholder="Nombre", value=cor[index], name="dino", required)
                             th(scope="col", class="rowIMG widthEdit")
-                                input(type="image", name="botondeenvio", src="public\img\editar.png", alt="Editar")
+                                button(type="submit" class="btn btn-outline-warning")
+                                    |Editar
                                     
         
