--- a/views/exito.jade
+++ b/views/exito.jade
@@ -1,7 +1,7 @@
-extends ./index.jade
-block advertencia
+extends ./homeAd.jade
+block alerts
     div(class='alert alert-success', role='success')
-        |Usuario registrado exitosamente
+        | !{txt}
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
                 |&times;
