--- a/views/warning.jade
+++ b/views/warning.jade
@@ -1,7 +1,7 @@
 extends ./index.jade
 block advertencia
     div(class='alert alert-warning', role='alert')
-        |Las contraseñas no coinciden 
+        | !{txt}
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
                 |&times;
