2da parte admon

--- a/views/menuAd.jade
+++ b/views/menuAd.jade
@@ -33,14 +33,11 @@ block cuerpo
                     |Delitos
                 ol.sub-menu
                     li.menu-item
-                        a(href="#")
+                        a(href="/modDel")
                             |Modificar Delitos
                     li.menu-item
-                        a(href="modUsu.html")
+                        a(href="/addDel")
                             |Agregar Delitos
-                    li.menu-item
-                        a(href="elUsu.html")
-                            |Eliminar Delitos
             li.menu-item
                 a(href="/logout")
                     |Cerrar Sesión
