--- a/views/warning2.jade
+++ b/views/warning2.jade
@@ -1,7 +1,7 @@
-extends ./index.jade
-block advertencia
-    div(class='alert alert-warning', role='alert')
-        |Usuario y/o constraseña incorrectos
+extends ./homeAd.jade
+block alerts
+    div(class='alert alert-warning', role='warning')
+        | !{txt}
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
                 |&times;
