Vistas del y menuU
Se hizo el formato de las vistas para delitos, y se corrigió una parte del menú del usuario

--- a/views/menuU.jade
+++ b/views/menuU.jade
@@ -37,7 +37,7 @@ block cuerpo
                             |Mis Datos
                     li.menu-item
                         a(href="modPass")
-                            |Modificar Contraseña
+                            |Contraseña
             li.menu-item
                 a(href="#")
                     |Ayuda
