--- a/views/agregarRep.jade
+++ b/views/agregarRep.jade
@@ -1,17 +1,16 @@
 extends ./menuU.jade
+block title
+    |Agregar Reporte
 block main
     main
         h1 Agregar reporte
-        form
+        form(action="/sumReporte", method="post")
             div.form-group
                 label(for="exampleFormControlSelect1")|Tipo de Delito
                 select(class="form-control", id="exampleFormControlSelect1", name="delito")
-                    option
-                        |1
-                    option
-                        |2
-                    option
-                        |3
+                    each val, index in idD
+                        option(value=val)
+                            | !{delito[index]}
             div.form-group
                 label(for="exampleFormControlSelect1")|Delegación donde ocurrio
                 select(class="form-control", id="exampleFormControlSelect1", name="delegacion")
@@ -20,6 +19,6 @@ block main
                             | !{del[index]}
             div.form-group
                 label(for="exampleFormControlSelect1")|Descripción de como ocurrio
-                textarea(class="form-control", id="exampleFormControlTextarea1", rows="3", maxlength=255, placeholder="Descripción, maximo 255 caracteres")
+                textarea(class="form-control", id="exampleFormControlTextarea1", rows="3", maxlength=255, placeholder="Descripción, maximo 255 caracteres", name="des", required)
             button(type="submit" class="btn btn-success")
                                     |Agregar
