--- a/views/aviso.jade
+++ b/views/aviso.jade
@@ -1,8 +1,8 @@
 extends ./menuU.jade
 block title
-    |Home
+    |Aviso de Privacidad
 block main
     block alerts
     main
-        h1 Home
+        h1 Aviso de Privacidad
         
