--- a/views/contacto.jade
+++ b/views/contacto.jade
@@ -1,8 +1,7 @@
 extends ./menuU.jade
 block title
-    |Home
+    |Contacto
 block main
     block alerts
     main
-        h1 Home
-        
+        h1 Contacto
