--- a/views/succesRe.jade
+++ b/views/succesRe.jade
@@ -1,7 +1,7 @@
 extends ./index.jade
 block advertencia
     div(class='alert alert-success', role='success')
-        |Usuario registrado exitosamente
+        |Usuario creado, al crear tu cuenta aceptas nuestro aviso de privacida. Se puede consultar en la sección Ayuda/Aviso de Privacidad.
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
                 |&times;
