--- a/views/warning2.jade
+++ b/views/warning2.jade
@@ -1,6 +1,6 @@
 extends ./homeAd.jade
 block alerts
-    div(class='alert alert-warning', role='warning')
+    div(class='alert alert-warning limAlert', role='warning')
         | !{txt}
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
