--- a/views/exito.jade
+++ b/views/exito.jade
@@ -1,6 +1,6 @@
 extends ./homeAd.jade
 block alerts
-    div(class='alert alert-success', role='success')
+    div(class='alert alert-success limAlert', role='success')
         | !{txt}
         button(type='button', class='close', data-dismiss='alert', aria-label='Close')
             span(aria-hidden='true')
