--- a/views/modUsuarios.jade
+++ b/views/modUsuarios.jade
@@ -34,7 +34,7 @@ block main
                             th(scope="col")
                                 input(type="text",class="form-control widthUS", placeholder="Apellido Materno", value=apm[index], name="apm", required)
                             th(scope="col")
-                                input(type="text",class="form-control", placeholder="Nombre", value=cor[index], name="dino", required)
+                                input(type="email",class="form-control", placeholder="Nombre", value=cor[index], name="dino", required)
                             th(scope="col", class="rowIMG widthEdit")
                                 button(type="submit" class="btn btn-outline-warning")
                                     |Editar
