--- a/views/aviso.jade
+++ b/views/aviso.jade
@@ -4,5 +4,52 @@ block title
 block main
     block alerts
     main
-        h1 Aviso de Privacidad
-        
+        div.jumbotron
+                h1.display-3
+                    |Aviso de Privacidad
+                hr.my-4
+                p.lead
+                    |De acuerdo a lo Previsto en la “Ley Federal de Protección de Datos Personales”, declara a Gelecek S.C.,
+                    |ser una empresa legalmente constituida de conformidad con las leyes mexicanas, con domicilio en Mar
+                    |Mediterráneo 227, Popotla, 11400 Ciudad de México, CDMX y como responsable del tratamiento de sus
+                    |datos personales, hace de su conocimiento que la información de nuestros clientes es tratada de forma
+                    |estrictamente confidencial por lo que al proporcionar sus datos personales, tales como:
+                ul(class="list-style")
+                    h5
+                        b
+                            li|Nombre Completo
+                            li|Fecha de Nacimiento
+                            li|Dirección de correo electrónico
+                p.lead 
+                    |Estos serán utilizados única y exclusivamente para los siguientes fines:
+                ul(class="list-style")
+                    h5
+                        b
+                            li|La creación de una cuenta digital
+                            li|Para la autentificación de su identidad
+                p.lead
+                    |Para prevenir el acceso no autorizado a sus datos personales y con el fin de asegurar que la información
+                    |sea utilizada para los fines establecidos en este aviso de privacidad, hemos establecido diversos
+                    |procedimientos con la finalidad de evitar el uso o divulgación no autorizados de sus datos,
+                    |permitiéndonos tratarlos debidamente. Así mismo, le informamos que sus datos personales pueden ser
+                    |Transmitidos para ser tratados por personas distintas a esta empresa. Todos sus datos personales son
+                    |tratados de acuerdo a la legislación aplicable y vigente en el país, por ello le informamos que usted tiene
+                    |en todo momento los derechos de acceder, rectificar, cancelar u oponerse al tratamiento que le damos a
+                    |sus datos personales; derecho que podrá hacer valer a través del encargado en manejarlos: Ocampo
+                    |Vazquez Bryann Milton como medio de contacto su dirreccion de correo electronico:
+                    |bryannmilton51@gmail.com y su numero telefonico: 5577419795.
+                p.lead
+                    |Así mismo Gelecek S.C. no se responsabiliza por cualquier uso indebido de la plataforma como el subir
+                    |1información falsa a la misma ya que todo lo que publique será responsabilidad del usuario y en caso de
+                    |un mal uso de esta plataforma se tomarán las debidas medidas contra aquellos que incumpla las normas.
+                p.lead
+                    |A través de estos canales usted podrá actualizar sus datos y especificar el medio por el cual desea
+                    |recibir información, ya que en caso de no contar con esta especificación de su parte, Gelecek S.C.
+                    |establecerá libremente el canal que considere pertinente para enviarle información. Este aviso de
+                    |privacidad podrá ser modificado por Gelecek S.C. , dichas modificaciones serán oportunamente
+                    |informadas a través de correo electrónico, teléfono, o cualquier otro medio de comunicación que Gelecek
+                    |S.C. determine para tal efecto.
+                h2.display-6|ATENTAMENTE
+                h2.display-6
+                    u
+                        |GELECEK
