--- a/views/aviso.jade
+++ b/views/aviso.jade
@@ -40,7 +40,7 @@ block main
                     |bryannmilton51@gmail.com y su numero telefonico: 5577419795.
                 p.lead
                     |Así mismo Gelecek S.C. no se responsabiliza por cualquier uso indebido de la plataforma como el subir
-                    |1información falsa a la misma ya que todo lo que publique será responsabilidad del usuario y en caso de
+                    |información falsa a la misma ya que todo lo que publique será responsabilidad del usuario y en caso de
                     |un mal uso de esta plataforma se tomarán las debidas medidas contra aquellos que incumpla las normas.
                 p.lead
                     |A través de estos canales usted podrá actualizar sus datos y especificar el medio por el cual desea
