--- a/views/contacto.jade
+++ b/views/contacto.jade
@@ -4,4 +4,15 @@ block title
 block main
     block alerts
     main
-        h1 Contacto
+        br
+        div.jumbotron
+            h1.display-5
+                |Contacto
+            hr.my-4
+            p.lead 
+                |Para contactarte con alguien de nuestro equipo manda un correo a:
+            h5
+                b|bryannmilton51@gmail.com
+                br
+                br
+                b|armandomangozlol@gmail.com
