--- a/views/home.jade
+++ b/views/home.jade
@@ -4,5 +4,19 @@ block title
 block main
     block alerts
     main
-        h1 Home
-        
+        div.jumbotron
+                h1.display-3
+                    |Home
+                hr.my-4
+                p.lead
+                    |Bienvenido, usuario. A continuación, te explicaremos qué es y cómo funciona “Insigniis”.
+                hr.my-4
+                p.lead 
+                    |Es una aplicación desarrollada con un propósito: mejorar la seguridad en México.
+                    |Actualmente miles de mexicanos sufren de situaciones de inseguridad, que ponen en riesgo su integridad física y emocional; Insigniis se enfoca en no dejar esos actos tan bajos en contra de nuestra sociedad impunes en base a un simple sistema. Insigniis cuenta con una app web y otra móvil. Los usuarios pueden ver los reportes de delitos, los cuales son generados por los mismos usuarios. De esta manera los usuarios compartirán sus experiencias en distintas situaciones de peligro alertando a las autoridades y a los usuarios mismos acerca de las zonas más peligrosas del área metropolitana.
+                p.lead
+                    |De momento estamos limitados a el área metropolitana, pero estamos trabajando para aumentar el alcance en el país, así que manténganse al tanto y recuerde “Su seguridad es importante si no se preocupa por usted mismo nadie más lo hará”.
+                h2.display-6|ATENTAMENTE
+                h2.display-6
+                    u
+                        | El equipo de GELECEK <3
