--- a/views/datosUsu.jade
+++ b/views/datosUsu.jade
@@ -1,27 +1,31 @@
 extends ./menuU.jade
 block main
     main
-        h1 Mis datos
-        table(class="table table-striped")
-            thead
-                tr
-                    th(scope="col")
-                        |Nombre
-                    th(scope="col")
-                        | !{nom}
-            tbody
-                tr
-                    th(scope="col")|Apellido Paterno
-                    th(scope="col")| !{app}
-                tr
-                    th(scope="col")|Apellido Materno
-                    th(scope="col")| !{apm}
-                tr
-                    th(scope="col")|Email
-                    th(scope="col")| !{cor}
-                tr
-                    th(scope="col")|Nombre de Usuario
-                    th(scope="col")| !{usu}
+        br
+        div.jumbotron
+            h1.display-5
+                |Datos Usuario
+            hr.my-4
+            table(class="table table-striped")
+                thead
+                    tr
+                        th(scope="col")
+                            |Nombre
+                        th(scope="col")
+                            | !{nom}
+                tbody
+                    tr
+                        th(scope="col")|Apellido Paterno
+                        th(scope="col")| !{app}
+                    tr
+                        th(scope="col")|Apellido Materno
+                        th(scope="col")| !{apm}
+                    tr
+                        th(scope="col")|Email
+                        th(scope="col")| !{cor}
+                    tr
+                        th(scope="col")|Nombre de Usuario
+                        th(scope="col")| !{usu}
                     
                 
                     
